[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/chook unpressed button.png" type="Texture" id=1]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/chook crown.png" type="Texture" id=3]
[ext_resource path="res://Fonts/pixeloid_sans.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/PixeloidSans-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/star.png" type="Texture" id=6]
[ext_resource path="res://Sprites/chook disabled button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/chook hover button.png" type="Texture" id=8]
[ext_resource path="res://Sprites/chook pressed button.png" type="Texture" id=9]
[ext_resource path="res://MainMenu.gd" type="Script" id=10]

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0.0454545 ), 0.0, 0.0, 0, 0, Vector2( 0.480392, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 80
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 32.0
margin_right = 32.0
margin_top = 32.0
margin_bottom = 32.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 32.0
margin_right = 32.0
margin_top = 32.0
margin_bottom = 32.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 32.0
margin_right = 32.0
margin_top = 32.0
margin_bottom = 32.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 32.0
margin_right = 32.0
margin_top = 32.0
margin_bottom = 32.0

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
resource_local_to_scene = true
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
resource_local_to_scene = true
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crown" type="Sprite" parent="."]
position = Vector2( 645, 185 )
rotation = -0.683924
scale = Vector2( 3.61836, 3.61836 )
z_index = 1
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Crown"]
position = Vector2( -1.8254, 1.36444 )
amount = 1
lifetime = 3.0
preprocess = 3.0
texture = ExtResource( 6 )
gravity = Vector2( 0, 0 )
angular_velocity = -90.0
scale_amount_curve = SubResource( 12 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.396078, 0.596078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1720.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1720.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 1 )
text = "Castling Hook"
align = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 1720.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 4 )
text = "a game (originally for the LUDWIG JAM 2021)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 1720.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( -120, 141 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 1720.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( -120, 141 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 564.0
margin_right = 1720.0
margin_bottom = 658.0
rect_pivot_offset = Vector2( -120, 141 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 698.0
margin_right = 1720.0
margin_bottom = 792.0
rect_pivot_offset = Vector2( -120, 141 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Label" parent="Settings/MarginContainer/HBoxContainer/VBoxContainer/Fullscreen" index="0"]
custom_fonts/font = SubResource( 6 )

[node name="Label" parent="Settings/MarginContainer/HBoxContainer/VBoxContainer/MuteMusic" index="0"]
custom_fonts/font = SubResource( 7 )

[node name="Label" parent="Settings/MarginContainer/HBoxContainer/VBoxContainer/MuteSFX" index="0"]
custom_fonts/font = SubResource( 8 )

[node name="Label" parent="Settings/MarginContainer/HBoxContainer/VBoxContainer/MusicVolume" index="0"]
custom_fonts/font = SubResource( 9 )

[node name="Label" parent="Settings/MarginContainer/HBoxContainer/VBoxContainer/SoundVolume" index="0"]
custom_fonts/font = SubResource( 10 )

[node name="CreditsTitle" parent="Settings/MarginContainer/HBoxContainer/VBoxContainer2" index="0"]
custom_fonts/font = SubResource( 11 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="new_game"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="continue_game"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="exit_pressed"]
[connection signal="toggled" from="Settings/MarginContainer/HBoxContainer/VBoxContainer/MuteSFX/MuteToggle" to="Settings" method="toggle_mute_music"]

[editable path="Settings"]
[editable path="Settings/MarginContainer/HBoxContainer/VBoxContainer/Fullscreen"]
[editable path="Settings/MarginContainer/HBoxContainer/VBoxContainer/MuteMusic"]
[editable path="Settings/MarginContainer/HBoxContainer/VBoxContainer/MuteSFX"]
[editable path="Settings/MarginContainer/HBoxContainer/VBoxContainer/MusicVolume"]
[editable path="Settings/MarginContainer/HBoxContainer/VBoxContainer/SoundVolume"]
